workloads/dev/ghost/ghost.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: dev
  labels:
    app: ghost
  annotations:
    # Container Image Automated Updates
    flux.weave.works/automated: "true"
    flux.weave.works/locked: "true"
    # do not apply this manifest on the cluster
    flux.weave.works/ignore: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:2-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2368
              name: http
              protocol: TCP
