workloads/dev/ghost/ghost.svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ghost
  namespace: dev
spec:
  selector:
    app: ghost
  type: ClusterIP
  ports:
    - name: "ghost"
      port: 80
      targetPort: 2368
