workloads/dev/ghost/ghost.ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://ghost.local"
    nginx.ingress.kubernetes.io/affinity: "cookies"
spec:
  rules:
    - host: ghost.local
      http:
        paths:
          - path: /
            backend:
              serviceName: ghost
              servicePort: 80
